--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,9 @@ GEMINI_MODEL=gemini-2.5-flash-image-preview
 
 # Redis Cache Configuration
 REDIS_URL=redis://localhost:6379
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
 CACHE_ENABLED=true
 IMAGE_ANALYSIS_CACHE_TTL=86400
 SCRIPT_CACHE_TTL=14400
