--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ NODE_ENV=development
 OPENAI_API_KEY=your_openai_api_key_here
 GEMINI_API_KEY=your_gemini_api_key_here
 GOOGLE_AI_API_KEY=your_google_ai_api_key_here
-KIE_AI_API_KEY=your_kie_ai_api_key_here
+# KIE_AI_API_KEY=your_kie_ai_api_key_here  # Legacy - no longer required (Google Veo 3 is used instead)
 
 # Optional Configuration
 MAX_IMAGES=4
